refactor CoffeeMachine class using code analysis